OP-85: Fixed some general styling issues and now it takes on the theme colors.  I also fixed a spacing issue with the label at the top of the dialog so it is now closer to the header.  I also fixed an IE7 issue where the X button was hanging out of the dialog.  There is a little IE7 work that still needs to be done.

--- a/web-app/themes/common/stylesheets/_manageWindowContainers.scss
+++ b/web-app/themes/common/stylesheets/_manageWindowContainers.scss
@@ -38,7 +38,7 @@ directly overriding the base ExtJS 4.0.1 rules.
 
       .x-window-header {
 
-        padding: 15px 0px 0px 34px !important;
+        padding: 15px 0px 0px 0px !important;
         width: 475px !important;
 
           .x-window-header-text {
